feat: add Echinopsis scroll atlas vertical
